--- a/app/src/main/res/layout/activity_menue_auswahl.xml
+++ b/app/src/main/res/layout/activity_menue_auswahl.xml
@@ -38,7 +38,7 @@
         android:text="Bestätigen" />
 
     <Button
-        android:id="@+id/buttonAbbrechen"
+        android:id="@+id/abortButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Abbrechen" />
