--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,7 @@
         android:id="@+id/buttonMenu"
         android:layout_width="86dp"
         android:layout_height="wrap_content"
+        android:onClick="menue"
         android:text="Menü"
         android:visibility="visible"
         app:layout_constraintEnd_toStartOf="@+id/buttonReservation"
