--- a/app/src/main/res/layout/activity_menue.xml
+++ b/app/src/main/res/layout/activity_menue.xml
@@ -19,6 +19,7 @@
         android:id="@+id/menuButton"
         android:layout_width="86dp"
         android:layout_height="wrap_content"
+        android:onClick="menue"
         android:text="Menü"
         android:visibility="visible"
         app:layout_constraintEnd_toStartOf="@+id/buttonReservation"
@@ -164,8 +165,15 @@
         android:id="@+id/buttonBestellung"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="bestellung"
+        android:layout_marginStart="232dp"
+        android:layout_marginLeft="232dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="16dp"
         android:text="zur Bestellung"
-        tools:layout_editor_absoluteX="232dp"
-        tools:layout_editor_absoluteY="667dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
