--- a/app/src/main/res/layout/activity_menue_auswahl.xml
+++ b/app/src/main/res/layout/activity_menue_auswahl.xml
@@ -35,6 +35,7 @@
         android:id="@+id/buttonBestaetigen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="bestaetigen"
         android:text="Bestätigen" />
 
     <Button
