--- a/app/src/main/res/layout/activity_menue_auswahl.xml
+++ b/app/src/main/res/layout/activity_menue_auswahl.xml
@@ -35,13 +35,14 @@
         android:id="@+id/buttonBestaetigen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="bestaetigen"
+        android:onClick="confirm"
         android:text="Bestätigen" />
 
     <Button
         android:id="@+id/abortButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:onClick="abort"
         android:text="Abbrechen" />
 
 </LinearLayout>
