--- a/app/src/main/res/layout/activity_abholen.xml
+++ b/app/src/main/res/layout/activity_abholen.xml
@@ -10,15 +10,17 @@
         android:id="@+id/buttonLogin"
         android:layout_width="117dp"
         android:layout_height="wrap_content"
+        android:onClick="login"
         android:text="Login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/buttonFeedback"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/menuButton"
+        android:id="@+id/buttonMenu"
         android:layout_width="86dp"
         android:layout_height="wrap_content"
+        android:onClick="menue"
         android:text="Menü"
         android:visibility="visible"
         app:layout_constraintEnd_toStartOf="@+id/buttonReservation"
@@ -29,6 +31,7 @@
         android:id="@+id/buttonReservation"
         android:layout_width="94dp"
         android:layout_height="wrap_content"
+        android:onClick="reservation"
         android:text="Reserv."
         android:visibility="visible"
         app:layout_constraintEnd_toStartOf="@+id/buttonFeedback"
@@ -39,8 +42,8 @@
         android:id="@+id/buttonFeedback"
         android:layout_width="112dp"
         android:layout_height="0dp"
+        android:onClick="feedback"
         android:text="Feedback"
-        app:layout_constraintEnd_toStartOf="@+id/buttonLogin"
         app:layout_constraintStart_toEndOf="@+id/buttonReservation"
         app:layout_constraintTop_toTopOf="parent" />
 
