--- a/app/src/main/res/layout/activity_menue.xml
+++ b/app/src/main/res/layout/activity_menue.xml
@@ -10,13 +10,14 @@
         android:id="@+id/buttonLogin"
         android:layout_width="117dp"
         android:layout_height="wrap_content"
+        android:onClick="login"
         android:text="Login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/buttonFeedback"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/menuButton"
+        android:id="@+id/buttonMenu"
         android:layout_width="86dp"
         android:layout_height="wrap_content"
         android:onClick="menue"
@@ -30,6 +31,7 @@
         android:id="@+id/buttonReservation"
         android:layout_width="94dp"
         android:layout_height="wrap_content"
+        android:onClick="reservation"
         android:text="Reserv."
         android:visibility="visible"
         app:layout_constraintEnd_toStartOf="@+id/buttonFeedback"
@@ -40,18 +42,24 @@
         android:id="@+id/buttonFeedback"
         android:layout_width="112dp"
         android:layout_height="0dp"
+        android:onClick="feedback"
         android:text="Feedback"
-        app:layout_constraintEnd_toStartOf="@+id/buttonLogin"
         app:layout_constraintStart_toEndOf="@+id/buttonReservation"
         app:layout_constraintTop_toTopOf="parent" />
 
     <CheckBox
         android:id="@+id/checkBoxVegetarisch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="124dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginLeft="3dp"
+        android:layout_marginTop="3dp"
+        android:layout_marginEnd="284dp"
+        android:layout_marginRight="284dp"
         android:text="vegetarisch"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/menuButton" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonMenu" />
 
     <TextView
         android:id="@+id/textViewPizza"
@@ -74,6 +82,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:clickable="true"
+        android:onClick="margeritha"
         android:lines="2"
         android:text="Margeritha\n (Tomatensauce, Mozarella, Basilikum)"
         android:textColor="@color/black"
@@ -91,6 +100,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:clickable="true"
+        android:onClick="prosciutto"
         android:lines="2"
         android:text="Prosciutto\n (Schinken, Käse)"
         android:textColor="@color/black"
@@ -108,6 +118,7 @@
         android:layout_marginEnd="32dp"
         android:layout_marginRight="32dp"
         android:clickable="true"
+        android:onClick="salami"
         android:lines="2"
         android:text="Salami\n (Salami, Käse)"
         android:textColor="@color/black"
@@ -165,12 +176,12 @@
         android:id="@+id/buttonBestellung"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="bestellung"
         android:layout_marginStart="232dp"
         android:layout_marginLeft="232dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginBottom="16dp"
+        android:onClick="bestellung"
         android:text="zur Bestellung"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
